--- a/ui/ExportKey.ui
+++ b/ui/ExportKey.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ExportKey</class>
- <widget class="QDialog" name="ExportKey" >
-  <property name="geometry" >
+ <widget class="QDialog" name="ExportKey">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,27 +10,27 @@
     <height>404</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>ExportKey</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
+   <property name="margin">
+    <number>9</number>
+   </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QLabel" name="TextLabel12" >
-       <property name="font" >
+      <widget class="QLabel" name="TextLabel12">
+       <property name="font">
         <font>
          <family>Arial</family>
          <pointsize>14</pointsize>
@@ -40,20 +41,20 @@
          <strikeout>false</strikeout>
         </font>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Key export</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>20</height>
@@ -62,20 +63,20 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="image" >
-       <property name="minimumSize" >
+      <widget class="QLabel" name="image">
+       <property name="minimumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="maximumSize" >
+       <property name="maximumSize">
         <size>
          <width>95</width>
          <height>40</height>
         </size>
        </property>
-       <property name="scaledContents" >
+       <property name="scaledContents">
         <bool>true</bool>
        </property>
       </widget>
@@ -83,48 +84,46 @@
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="TextLabel13" >
-     <property name="text" >
+    <widget class="QLabel" name="TextLabel13">
+     <property name="text">
       <string>Please enter the filename for the key.</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame_3" >
-     <property name="frameShape" >
+    <widget class="QFrame" name="frame_3">
+     <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
-     <property name="frameShadow" >
+     <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QHBoxLayout" >
-      <property name="margin" >
-       <number>8</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QHBoxLayout">
+      <property name="spacing">
        <number>6</number>
       </property>
+      <property name="margin">
+       <number>8</number>
+      </property>
       <item>
-       <widget class="QLabel" name="TextLabel14" >
-        <property name="text" >
+       <widget class="QLabel" name="TextLabel14">
+        <property name="text">
          <string>Filename</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="filename" />
+       <widget class="QLineEdit" name="filename"/>
       </item>
       <item>
-       <widget class="QToolButton" name="fileBut" >
-        <property name="sizePolicy" >
-         <sizepolicy>
-          <hsizetype>1</hsizetype>
-          <vsizetype>0</vsizetype>
+       <widget class="QToolButton" name="fileBut">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>...</string>
         </property>
        </widget>
@@ -133,8 +132,8 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="TextLabel3" >
-     <property name="text" >
+    <widget class="QLabel" name="TextLabel3">
+     <property name="text">
       <string>DER is a binary format of the key without encryption
 PEM is a base64 encoded key with optional encryption
 PKCS#8 is an encrypted official Key-exchange format</string>
@@ -142,33 +141,31 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame_2" >
-     <property name="frameShape" >
+    <widget class="QFrame" name="frame_2">
+     <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
-     <property name="frameShadow" >
+     <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QHBoxLayout" >
-      <property name="margin" >
-       <number>8</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QHBoxLayout">
+      <property name="spacing">
        <number>6</number>
       </property>
+      <property name="margin">
+       <number>8</number>
+      </property>
       <item>
-       <widget class="QLabel" name="TextLabel1" >
-        <property name="text" >
+       <widget class="QLabel" name="TextLabel1">
+        <property name="text">
          <string>Export Format</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="exportFormat" >
-        <property name="sizePolicy" >
-         <sizepolicy>
-          <hsizetype>7</hsizetype>
-          <vsizetype>0</vsizetype>
+       <widget class="QComboBox" name="exportFormat">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -179,50 +176,50 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="TextLabel2" >
-     <property name="text" >
+    <widget class="QLabel" name="TextLabel2">
+     <property name="text">
       <string>When exporting the private key it should be encrypted.</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="privFrame" >
-     <property name="frameShape" >
+    <widget class="QFrame" name="privFrame">
+     <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
-     <property name="frameShadow" >
+     <property name="frameShadow">
       <enum>QFrame::Sunken</enum>
      </property>
-     <layout class="QVBoxLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
+     <layout class="QVBoxLayout">
+      <property name="spacing">
        <number>6</number>
       </property>
+      <property name="margin">
+       <number>9</number>
+      </property>
       <item>
-       <widget class="QCheckBox" name="exportPrivate" >
-        <property name="toolTip" >
+       <widget class="QCheckBox" name="exportPrivate">
+        <property name="toolTip">
          <string>When exporting the private part, it should be encrypted.</string>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>E&amp;xport the private part of the Key too</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="exportPkcs8" >
-        <property name="text" >
+       <widget class="QCheckBox" name="exportPkcs8">
+        <property name="text">
          <string>Export as PKCS#8</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="encryptKey" >
-        <property name="enabled" >
+       <widget class="QCheckBox" name="encryptKey">
+        <property name="enabled">
          <bool>false</bool>
         </property>
-        <property name="text" >
+        <property name="text">
          <string>&amp;Encrypt the Key with a password</string>
         </property>
        </widget>
@@ -231,29 +228,29 @@ PKCS#8 is an encrypted official Key-exchange format</string>
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QPushButton" name="PushButton9" >
-       <property name="text" >
+      <widget class="QPushButton" name="PushButton9">
+       <property name="text">
         <string>&amp;Cancel</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>20</height>
@@ -262,8 +259,8 @@ PKCS#8 is an encrypted official Key-exchange format</string>
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="PushButton7" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>&amp;OK</string>
        </property>
       </widget>
@@ -279,7 +276,7 @@ PKCS#8 is an encrypted official Key-exchange format</string>
   <tabstop>exportPrivate</tabstop>
   <tabstop>exportPkcs8</tabstop>
   <tabstop>encryptKey</tabstop>
-  <tabstop>PushButton7</tabstop>
+  <tabstop>okButton</tabstop>
   <tabstop>PushButton9</tabstop>
  </tabstops>
  <resources/>
@@ -290,29 +287,13 @@ PKCS#8 is an encrypted official Key-exchange format</string>
    <receiver>ExportKey</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
-     <x>52</x>
-     <y>360</y>
+    <hint type="sourcelabel">
+     <x>62</x>
+     <y>392</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>155</x>
      <y>359</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>PushButton7</sender>
-   <signal>clicked()</signal>
-   <receiver>ExportKey</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>421</x>
-     <y>364</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>278</x>
-     <y>355</y>
     </hint>
    </hints>
   </connection>
